--- a/spin2/.vscodeignore
+++ b/spin2/.vscodeignore
@@ -2,6 +2,7 @@
 */**
 .DS_Store
 syntaxes/*
+themes/*
 REF/*
 TEST/*
 !out/*
@@ -9,6 +10,11 @@ TEST/*
 !spin2.language-configuration.json
 !syntaxes/spin1.tmLanguage.json
 !spin1.language-configuration.json
+!themes/isp-spin-dark-theme.json
+!themes/isp-spin-light-theme.json
+!themes/isp-spin-dark-bg-theme.json
+!themes/isp-spin-light-bg-theme.json
+!themes/isp-spin-syntax-theme.json
 !package.json
 !README.md
 !CHANGELOG.md
