--- a/spin2/.vscodeignore
+++ b/spin2/.vscodeignore
@@ -15,6 +15,7 @@ TEST/*
 !themes/isp-spin-dark-bg-theme.json
 !themes/isp-spin-light-bg-theme.json
 !themes/isp-spin-syntax-theme.json
+!themes/isp-spin-dark-theme-old.json
 !package.json
 !README.md
 !CHANGELOG.md
